--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "BSD-2-Clause",
   "dependencies": {
-    "express": "~4.12.4"
+    "express": "~4.12.4",
+    "socket.io": "~1.3.5",
+    "underscore": "~1.8.3"
   }
 }
